@@ -37,6 +37,7 @@ Version 1.3.12+svn:
     * Replaced the 'Binary Saves' option with 'Compressed Saves' and now
       writes gzip files.
     * Fixed undo causing OOS in multiplayer
+    * Allowed recruits without traits to be undon
     * Load the recall list with a start of scenario save.
 
 Version 1.3.12:
