@@ -1068,13 +1068,13 @@ private:
 
 				// Dissallow undoing of recruits. Can be enabled again once the unit's
 				// description= key doesn't use random anymore.
-				/*const bool shroud_cleared = */clear_shroud(team_num);
-				//if(shroud_cleared || new_unit.type()->genders().size() > 1
-				//		|| new_unit.type()->has_random_traits()) {
+				const bool shroud_cleared = clear_shroud(team_num);
+				if(shroud_cleared || new_unit.type()->genders().size() > 1
+						|| new_unit.type()->has_random_traits()) {
 					clear_undo_stack(team_num);
-				/*} else {
+				} else {
 					undo_stack_.push_back(undo_action(new_unit,loc,RECRUIT_POS));
-				} */
+				} 
 
 				gui_->recalculate_minimap();
 				gui_->invalidate_game_status();
