@@ -17,8 +17,6 @@ archive and the following results where found for 687 files:
 before 1018.1 MB
 after    79.3 MB
 
-Undoing recruits without random traits is no longer possible.
-
 There has been more change in the animation engine. The only expected impact is
 that mvt anims don't "slow down" on hard to cross terrain anymore. If you had 
 specially crafted WML taking that into account, beware.
