@@ -67,6 +67,7 @@ Version 1.3.12+svn:
      (closes bug #10219)
    * Fixed networking code to filter sent items when doing undo bug 
      (Need testing #10588)
+   * Allowed again undoing nonrandom recruits after bug #10588 was fixed
    * Avoid an assertion failure triggered in the replays 
 
 Version 1.3.12:
